# System-Performance-Analyzer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebook/: test.ipynb
src/: analysis.py  config.py  database.py  logger.py  ml_engine.py  report_generator.py  user_auth.py  user_session.py
src/analysis/: analysis.py
src/auth/: user_auth.py
src/config/: config.py
src/database/: database.py
src/logger/: logger.py
src/ml_engine/: ml_engine.py
src/pages/: admin.py  auth_page.py  dashboard.py  monitor.py  report.py  setting.py
src/report_gen/: report_generator.py
src/services/: base_service.py  network_monitor.py  process_monitor.py  service_orchestrator.py  system_metrics.py
src/user_session/: user_session.py
