[project]
name = "system-performance-analyzer"
version = "1.0.0"
description = "Streamlit web app to monitor system performance, detect anomalies and generate PDF reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Abhishek Tiwari" }
]
dependencies = [
    "psutil",
    "python-dotenv",
    "bcrypt",
    "streamlit",
    "PyJWT",
    "matplotlib",
    "scikit-learn",
    "plotly",
    "reportlab",
]
